sorting out swagger
