# routes/adminRoute.js
@@ -9,7 +9,9 @@ router.post("/login", adminControler.logIn)
 
 router.patch('/:userId', verifyAdmin, adminControler.updateAdmn);
 
-router.delete('/:userId', verifyAdmin, adminControler.deleteAdmin); //delete admins
+router.delete('/:userId', verifyAdmin, adminControler.deleteAdmin); //delete admin
+
+router.delete('/user/:userId', verifyAdmin, userControler.deleteUser); //delete user
 
 router.get("/data", verifyAdmin, adminControler.data)
 
